# amplifier-voice

./: ARCHITECTURE.md  QUICKSTART.md  SETUP.md
ai-context/realtime-api/: realtime-models-prompting.md  realtime-webrtc.md  realtime-websocket.md  realtime.md
docs/plans/: 2026-03-10-realtime-1.5-upgrade-plan.md
research/brainstorms/: 02-technical-api-capabilities.md  04-unique-differentiators.md  06-edge-cases-failure-modes.md  08-prompt-engineering-strategies.md  12-conversation-state-machine.md  13-notification-patterns.md  17-security-architecture.md  19-phase1-implementation-spec.md  20-use-case-catalog.md  21-error-message-catalog.md  23-conversation-flow-diagrams.md  24-configuration-reference.md  25-migration-guide.md  26-troubleshooting-guide.md  28-sound-design-guide.md  31-release-checklist.md
research/findings/: 01-openai-realtime-api-official-docs.md  02-tool-calling-best-practices.md  06-latency-optimization.md  07-conversation-design-patterns.md  10-pricing-and-optimization.md  13-telephony-integration.md  17-mcp-integration.md  19-personalization-preferences.md  24-audio-quality-accuracy.md  26-openai-agents-sdk.md  27-streaming-patterns.md  28-wake-word-patterns.md  30-personality-design.md  38-user-onboarding.md  43-agent-frameworks.md  (+11 more)
voice-client/: README.md  package-lock.json  package.json
voice-server/: .env.example  README.md  pyproject.toml  test_startup.py
voice-server/homeassistant_tool/: .env.example  README.md  __init__.py  auth.py  client.py  config.py  exceptions.py  models.py  pyproject.toml  rest_client.py  ws_client.py
(+104 files in other folders)
